--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,15 @@
     --container-xxs: 0.65rem;
 }
 
+@layer utilities {
+  .max-w-8xl {
+    max-width: 90rem; /* Equivalente a 1440px */
+  }
+  .max-w-9xl {
+    max-width: 100rem; /* Equivalente a 1600px */
+  }
+}
+
 :root {
     --background: oklch(1 0 0);
     --foreground: oklch(0.145 0 0);
